--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,7 @@
     
     <string name="username">Username</string>
     <string name="password">Password</string>
+    
+    <string name="double_column">:</string>
 
 </resources>
